--- a/FreeIMU_GUI/FreeIMU_GUI/freeimu_cal.ui
+++ b/FreeIMU_GUI/FreeIMU_GUI/freeimu_cal.ui
@@ -22,12 +22,12 @@
     <height>600</height>
    </size>
   </property>
-  <property name="maximumSize">
+  <!-- <property name="maximumSize">
    <size>
-    <width>800</width>
-    <height>680</height>
+    <width>1024</width>
+    <height>1</height>
    </size>
-  </property>
+  </property> -->
   <property name="windowTitle">
    <string>FreeIMU Calibration Application</string>
   </property>
@@ -45,9 +45,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
+      <y>40</y>
       <width>791</width>
-      <height>16</height>
+      <height>32</height>
      </rect>
     </property>
     <property name="orientation">
@@ -60,7 +60,7 @@
       <x>0</x>
       <y>0</y>
       <width>801</width>
-      <height>25</height>
+      <height>50</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout" rowstretch="0">
@@ -178,7 +178,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>30</y>
+      <y>55</y>
       <width>801</width>
       <height>631</height>
      </rect>
